--- a/app.json
+++ b/app.json
@@ -3,5 +3,7 @@
     "name": "demoless",
     "slug": "demoless",
     "sdkVersion": "23.0.0"
-  }
+  },
+  "name": "demoless",
+  "displayName": "demoless"
 }
